--- a/index.html
+++ b/index.html
@@ -7,37 +7,65 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="page-header">
-        <button type="button" class="navbar">
-        <ul class="nav nav-tabs pull-right">
-          <li class="active"><a href="#">Food</a></li>
-          <li><a href="#">Activities</a></li>
-          <li><a href="#">Lodging</a></li>
-        </ul>
-      </header>
 
-      <div class="jumbotron">
-        <h1 class="title">Iceland Vacation</h1>
-        <img src="img/iceland2.jpg" alt="icelandic landscape" class="center-block">
-      </div>
+    <!-- Navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand text-muted" href="#">Iceland Vacation</a>
+        <div class="collapse navbar-collapse">
 
-      <div class="col-sm-4">
-        <h2>Food</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <h2>Activities</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <h2>Lodging</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Food</a></li>
+            <li><a href="#">Activities</a></li>
+            <li class="dropdown"><a data-toggle="dropdown" data-target="#">Lodging<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Option 1</a></li>
+                <li><a href="#">Option 1</a></li>
+                <li><a href="#">Option 1</a></li>
+                <li class="divider"></li>
+                <li><a href="#">More Options</a></li>
+              </ul>
+          </ul>
+        </div>
       </div>
     </div>
+    <!-- End navbar -->
+
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="title">Iceland Vacation</h1>
+        <img src="img/iceland2.jpg" alt="icelandic landscape" class="center-block img-responsive">
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <h2>Food</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+        <div class="col-sm-1"></div>
+        <div class="col-sm-4">
+          <h2>Activities</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.
+          </p>
+        </div>
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3">
+          <h2>Lodging</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <!-- Include all compiled plugins (below), or include individual files as needed -->
+   <script src="js/bootstrap.min.js"></script>
   </body>
 
 
