--- a/index.html
+++ b/index.html
@@ -35,12 +35,51 @@
       </div>
     </div>
     <!-- End navbar -->
+    <!-- Begin CAROUSEL! -->
 
-    <div class="container">
-      <div class="jumbotron">
+    <div id="ourcarousel" class="carousel slide jumbotron" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#ourcarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#ourcarousel" data-slide-to="1"></li>
+        <li data-target="#ourcarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-caption">
+          <h1>Iceland</h1>
+        </div>
+        <div class="item active">
+          <img src="img/iceland1.jpg" alt="icelandic landscape">
+        </div>
+        <div class="item">
+          <img src="img/iceland2.jpg" alt="icelandic landscape">
+        </div>
+        <div class="item">
+          <img src="img/iceland3.jpg" alt="icelandic landscape">
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#ourcarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#ourcarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+    <!-- End Carousel -->
+
+      <!-- <div class="jumbotron">
         <h1 class="title">Iceland Vacation</h1>
         <img src="img/iceland2.jpg" alt="icelandic landscape" class="center-block img-responsive">
-      </div>
+      </div> -->
+    <div class="container">
       <div class="row">
         <div class="col-sm-3">
           <h2>Food</h2>
